--- a/helloworld.html
+++ b/helloworld.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
-		<title>Hi there.</title>
+		<title>Git Demo</title>
 	</head>
 	<body>
-		<p><font size=28>Git demo!</font></p>
+		<p><font size=28>Hello World!</font></p>
 	</body>
 </html>
